fix: ipad mini overlap, and add more screens

--- a/src/app/sponsors/sponsors.module.css
+++ b/src/app/sponsors/sponsors.module.css
@@ -107,9 +107,16 @@
   font-weight: 400;
   line-height: normal;
 
+  @media screen and (min-width:768px) and (max-width:840px) {
+    font-size: 94.8px;
+  }
 
   @media screen and (max-width:560px) {
     font-size: 44px;
+  }
+
+  @media screen and (max-width:300px) {
+    font-size: 34px;
   }
 }
 
@@ -121,8 +128,27 @@
   justify-content: center;
   align-items: center;
 
+  @media screen and (min-width:768px) and (max-width:820px) {
+    margin-top: 170px;
+    right: 10px;
+  }
+
   @media screen and (max-width:560px) {
     transform: translate(10%, -55%);
+    margin-top: 60px;
+  }
+
+
+  @media screen and (width:820px) {
+    margin-top: 170px;
+    right: 10px;
+  }
+
+
+
+
+  @media screen and (max-width:300px) {
+    transform: translate(20%, -55%);
     margin-top: 60px;
   }
 }
@@ -139,7 +165,7 @@
   gap: 115px;
   justify-content: center;
 
-  @media screen and  (max-width:560px) {
+  @media screen and (max-width:560px) {
     gap: 5px;
   }
 }
@@ -164,6 +190,10 @@
     padding: 0px;
   }
 
+  @media screen and (min-width:768px) and (max-width:860px){
+    margin-top: 10px;
+    transform: translateY(30px);
+  }
 }
 
 .parentList::-webkit-scrollbar {
